--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+loom.platform=forge
+
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
 	minecraft_version=1.19.4
 	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.17
+	forge_version=1.19.4-45.0.49
 	
 # Mod Properties
 	mod_version=3.0.0
-	maven_group=com.tterrag.blur
-	archives_base_name=blur
+	maven_group=com.github.dima_dencep.mods
+	archives_base_name=blur-forge
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.76.0+1.19.4
 	satin_version=1.11.0
-	midnightlib_version=1.2.1-fabric
+	midnightlib_version=1.3.0-forge
