Port to forge v2

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+loom.platform=forge
+
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
 	minecraft_version=1.19.2
 	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.10
+	forge_version=1.19.2-43.2.8
 	
 # Mod Properties
-	mod_version = 2.6.1
-	maven_group = com.tterrag.blur
-	archives_base_name = blur
+	mod_version = 3.0.0
+	maven_group = com.github.dima_dencep.mods
+	archives_base_name = blur-forge
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.66.0+1.19.2
-	satin_version = 1.9.0
-	midnightlib_version=1.0.0-fabric
+	satin_version = 1.19.2+1.11.0
+	midnightlib_version=1.0.0-forge
