Migration from worst config library (midnightlib)

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,7 +68,7 @@ jobs:
             ${{ steps.read_property.outputs.minecraft_version }}
 
           dependencies: |
-            midnightlib | depends | *
+            cloth-config | depends | *
 
           java: |
             17
