--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@ loom.platform=forge
 	archives_base_name = blur-forge
 
 # Dependencies
-	satin_version = 1.19.2+1.12.1
-	midnightlib_version=1.0.0-forge
+	satin_version = 1.19.2+1.12.2
+	cloth_config_version = 8.2.88
