--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 		url = 'https://repo.constructlegacy.ru/public'
 	}
 	maven {
-		url = "https://api.modrinth.com/maven"
+		url = "https://maven.shedaniel.me/"
 	}
 }
 
@@ -36,7 +36,7 @@ dependencies {
 	modImplementation "com.github.dima_dencep.mods:satin-forge:${satin_version}"
 	include "com.github.dima_dencep.mods:satin-forge:${satin_version}"
 
-	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
+	modImplementation "me.shedaniel.cloth:cloth-config-forge:${project.cloth_config_version}"
 }
 
 processResources {
