--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,12 +19,6 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Grant execute permission for Gradlew
-        run: chmod +x gradlew
-
-      - name: Upload assets to releases
-        run: ./gradlew build
-
       - name: Get previous tag
         run: echo "previous_tag=$(git rev-parse $(git describe --tags --abbrev=0 --exclude *-dev) 2>/dev/null || echo '')" >> $GITHUB_ENV
 
@@ -45,8 +39,16 @@ jobs:
           path: './gradle.properties'
           properties: 'mod_version minecraft_version'
 
+      - name: Grant execute permission for Gradlew
+        run: chmod +x gradlew
+      - name: Upload assets to releases
+        run: ./gradlew build publish
+        env:
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+
       - name: Publish to Modrinth & CurseForge
-        uses: Kir-Antipov/mc-publish@v3.2
+        uses: Kir-Antipov/mc-publish@v3.3
         with:
           modrinth-id: o4Wx4DUB
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
@@ -68,7 +70,7 @@ jobs:
             ${{ steps.read_property.outputs.minecraft_version }}
 
           dependencies: |
-            cloth-config | depends | *
+            cloth-config
 
           java: |
             17
