--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,29 +1,72 @@
 on:
   push:
-    branches: [ "fabric-1.19.3" ]
-  pull_request:
-    branches: [ "fabric-1.19.3" ]
-
-permissions:
-  contents: read
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build --stacktrace --info
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: Blur-Artifact
-        path: build/libs/blur-*.*.jar
-        if-no-files-found: error
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Get previous tag
+        run: echo "previous_tag=$(git rev-parse $(git describe --tags --abbrev=0 --exclude *-dev) 2>/dev/null || echo '')" >> $GITHUB_ENV
+
+      - name: Build Changelog
+        id: build_changelog
+        uses: metcalfc/changelog-generator@v4.1.0
+        if: env.previous_tag
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
+          head-ref: ${{ github.ref }}
+          base-ref: ${{ env.previous_tag }}
+          fetch: false
+
+      - name: Read value from Properties-file
+        id: read_property
+        uses: christian-draeger/read-properties@1.1.1
+        with:
+          path: './gradle.properties'
+          properties: 'mod_version minecraft_version'
+
+      - name: Upload assets to releases
+        run: |
+          chmod +x gradlew
+          ./gradlew build
+
+      - name: Publish to Modrinth & CurseForge
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+          modrinth-id: oY2B1pjg
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+
+          curseforge-id: 654373
+          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+          name: "[${{ steps.read_property.outputs.minecraft_version }}] v${{ steps.read_property.outputs.mod_version }}"
+
+          changelog: ${{steps.build_changelog.outputs.changelog}}
+
+          version-type: release
+
+          loaders: |
+            neoforge
+            forge
+
+          game-versions: |
+            ${{ steps.read_property.outputs.minecraft_version }}
+
+          dependencies: |
+            config-menus-forge(optional){modrinth:5WeWGLoJ}{curseforge:544048}
+
+          java: |
+            17
