--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ loom.platform=forge
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.10
-	loader_version=1.20.1-47.1.3
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
+	loader_version=1.19.2-43.3.0
 	
 # Mod Properties
 	mod_version=3.1.1
@@ -16,4 +16,4 @@ loom.platform=forge
 	archives_base_name=blur-forge
 
 # Dependencies
-	satin_version=1.20.1+1.15.0-SNAPSHOT
+	satin_version=1.19.2+1.12.3
